# Django-stripe-test

./: .gitignore  README.md  pyproject.toml  requirements.txt
payment/: admin.py  models.py  views.py
payment/migrations/: 0001_initial.py  0002_transaction.py
server/: settings.py  urls.py
static/: style.css
template/: cancel.html  product-top.html  success.html
